Update to use latest component library

--- a/angular/demo/src/app/demo/title/title.component.html
+++ b/angular/demo/src/app/demo/title/title.component.html
@@ -11,6 +11,6 @@
     </button>
     <div fxLayout="row" fxLayoutAlign="space-between center" style="width: 100%;">
         <h6 class="example-app-name">{{ title }}</h6>
-        <button mat-stroked-button color="link" (click)="openLoginDialog()"><mat-icon>person</mat-icon> LOG IN</button>
+        <button mat-stroked-button color="link" (click)="openLoginDialog()"><mat-icon>person</mat-icon> Log In</button>
     </div>
 </mat-toolbar>
