--- a/angular/demo/src/app/demo/devices/devices.component.html
+++ b/angular/demo/src/app/demo/devices/devices.component.html
@@ -1,14 +1,14 @@
 <app-title></app-title>
 <mat-tab-group [@.disabled]="true">
-    <mat-tab label="Overview">
+    <mat-tab label="OVERVIEW">
         <app-overview></app-overview>
     </mat-tab>
 
-    <mat-tab label="Locations">
+    <mat-tab label="LOCATIONS">
         <app-locations></app-locations>
     </mat-tab>
 
-    <mat-tab label="Reports">
+    <mat-tab label="REPORTS">
         <app-reports></app-reports>
     </mat-tab>
 </mat-tab-group>
