--- a/angular/_darkTheme.scss
+++ b/angular/_darkTheme.scss
@@ -31,8 +31,7 @@
     /*tab bar*/
     .mat-tab-group {
         .mat-tab-header {
-            color: red;
-            background-color: map-get($pxb-darkBlack, 100);
+            background-color: map-get($background, app-bar);
         }
         &.mat-primary .mat-tab-header {
             background-color: map-get($background, base);
@@ -75,16 +74,6 @@
         color: map-get($foreground, text);
     }
 
-    /* for the input forms fields */
-    .mat-form-field-appearance-fill .mat-form-field-flex {
-        background-color: map-get($background, background);
-    }
-    .mat-form-field-appearance-legacy .mat-form-field-label,
-    .mat-form-field-label,
-    .mat-form-field-appearance-standard .mat-form-field-label {
-        color: map-get($foreground, text);
-    }
-
     /* selection option*/
     .mat-option.mat-selected:not(.mat-option-disabled) {
         color: map-get($foreground, text);
@@ -94,14 +83,6 @@
     }
     .mat-accent .mat-option.mat-selected:not(.mat-option-disabled) {
         color: map-get($foreground, text);
-    }
-
-    /* dropdown list*/
-    .mat-select-panel {
-        background-color: map-get($pxb-black, 900);
-        .mat-option {
-            color: map-get($foreground, text);
-        }
     }
 
     /* snackbar theming */
@@ -119,32 +100,12 @@
 
     /* table*/
     .mat-table {
-        background-color: map-get($pxb-darkBlack, 100);
+        background-color: map-get($background, app-bar);
     }
 
     /* paginator*/
     .mat-paginator {
-        background-color: map-get($pxb-darkBlack, 100);
+        background-color: map-get($background, app-bar);
         color: map-get($foreground, text);
-    }
-
-    /* Cards */
-    .mat-card {
-        background-color: map-get($pxb-black, 900);
-    }
-
-    .pxb-drawer {
-        background-color: map-get($pxb-darkBlack, 800);
-        .pxb-drawer-nested-nav-item mat-expansion-panel {
-            background-color: map-get($pxb-black, 500);
-        }
-
-        .pxb-info-list-item-active .pxb-info-list-item .mat-list-item-content {
-            color: map-get($foreground, light);
-        }
-
-        .pxb-info-list-item-active:after {
-            background-color: map-get($primary, 500);
-        }
     }
 }
