--- a/angular/demo/src/app/app.component.html
+++ b/angular/demo/src/app/app.component.html
@@ -1,12 +1,15 @@
-<app-sidenav>
-    <router-outlet></router-outlet>
-    <div>
-        <button mat-fab class="fab fab1" color="primary" (click)="toggleTheme()">
-            <i class="material-icons">flip_to_back</i> toggle theme
-        </button>
-        <button mat-chip class="fab fab2">{{ currentTheme.themeName }}</button>
-    </div>
-</app-sidenav>
+<pxb-drawer-layout [variant]="getVariant()" (backdropClick)="stateService.setDrawerOpen(false)">
+    <app-sidenav pxb-drawer></app-sidenav>
+    <ng-container pxb-content>
+        <router-outlet></router-outlet>
+        <div>
+            <button mat-fab class="fab fab1" color="primary" (click)="toggleTheme()">
+                <i class="material-icons">flip_to_back</i> toggle theme
+            </button>
+            <button mat-chip class="fab fab2">{{ currentTheme.themeName }}</button>
+        </div>
+    </ng-container>
+</pxb-drawer-layout>
 
 <div class="overlay" (click)="showNotice = false" *ngIf="showNotice">
     <div class="notice">
