--- a/angular/demo/src/app/demo/title/title.component.html
+++ b/angular/demo/src/app/demo/title/title.component.html
@@ -4,7 +4,7 @@
         type="button"
         aria-label="Toggle sidenav"
         mat-icon-button
-        (click)="onMenuClicked()"
+        (click)="openDrawer()"
         style="margin-left: 0; margin-right: 10px;"
     >
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
