--- a/angular/pxb-component-theme.scss
+++ b/angular/pxb-component-theme.scss
@@ -55,8 +55,9 @@
 }
 
 @mixin pxb-info-list-item-theme($theme) {
+    $foreground: map-get($theme, foreground);
     .pxb-info-list-item {
-        color: inherit;
+        color: map-get($foreground, text);
         &.mat-list-item,
         .mat-list-item-content {
             color: inherit;
