--- a/angular/pxb-component-theme.scss
+++ b/angular/pxb-component-theme.scss
@@ -94,15 +94,11 @@
             background-color: map-get($background, background);
         }
 
-        .pxb-info-list-item-active * {
+        .pxb-drawer-nav-item-active {
             color: map-get($primary, 500);
         }
 
-        .pxb-info-list-item-active:after {
-            background-color: map-get($primary, 50);
-        }
-        // This will have to be updated after the circle-ripple change is added to the component library.
-        .pxb-drawer-nav-item-rail:after {
+        .pxb-drawer-nav-item-active-highlight {
             background-color: map-get($primary, 50);
         }
     }
