Add backwards compatibility

--- a/angular/pxb-component-theme.scss
+++ b/angular/pxb-component-theme.scss
@@ -98,6 +98,7 @@
             color: map-get($primary, 500);
         }
 
+        .pxb-info-list-item-active:after,  // TODO Deprecated: This can be removed in the future.
         .pxb-drawer-nav-item-active-highlight {
             background-color: map-get($primary, 50);
         }
