--- a/angular/_blueTheme.scss
+++ b/angular/_blueTheme.scss
@@ -80,4 +80,12 @@
             border-color: map-get($accent, 500);
         }
     }
+
+    /* steppers */
+    .mat-step-header .mat-step-icon-state-done {
+        background-color: map-get($pxb-gray, 300);
+    }
+    .mat-step-header[aria-selected='true'] .mat-step-icon {
+        background-color: map-get($primary, 500);
+    }
 }
