--- a/angular/_darkTheme.scss
+++ b/angular/_darkTheme.scss
@@ -89,6 +89,12 @@
         background-color: map-get($background, dialog);
         color: map-get($foreground, secondary-text);
     }
+    .mat-step-header .mat-step-icon-state-done {
+        background-color: map-get($pxb-gray, 300);
+    }
+    .mat-step-header[aria-selected='true'] .mat-step-icon {
+        background-color: map-get($primary, 500);
+    }
 
     /* table*/
     .mat-table {
