--- a/angular/_darkTheme.scss
+++ b/angular/_darkTheme.scss
@@ -101,7 +101,10 @@
         background-color: unset;
     }
     .mat-step-header {
-        &:hover, &.cdk-program-focused, &.cdk-mouse-focused, &.cdk-focused {
+        &:hover,
+        &.cdk-program-focused,
+        &.cdk-mouse-focused,
+        &.cdk-focused {
             background-color: unset;
         }
     }
