--- a/angular/demos/theme/src/app/demo/devices/tabs/overview/add-dialog/add-dialog.component.html
+++ b/angular/demos/theme/src/app/demo/devices/tabs/overview/add-dialog/add-dialog.component.html
@@ -1,9 +1,9 @@
 <h1 mat-dialog-title>Add new device</h1>
 <div mat-dialog-content>
-    <mat-form-field style="width: 100%;">
+    <mat-form-field style="width: 100%">
         <input matInput placeholder="Device name" required />
     </mat-form-field>
-    <mat-form-field style="width: 100%;">
+    <mat-form-field style="width: 100%">
         <input matInput placeholder="Network ID" required />
     </mat-form-field>
     <mat-form-field>
