--- a/angular/demos/theme/src/app/demo/settings/settings.component.html
+++ b/angular/demos/theme/src/app/demo/settings/settings.component.html
@@ -3,9 +3,7 @@
     <mat-accordion [multi]="true">
         <mat-expansion-panel>
             <mat-expansion-panel-header>
-                <mat-panel-title>
-                    Turn on notifications
-                </mat-panel-title>
+                <mat-panel-title> Turn on notifications </mat-panel-title>
             </mat-expansion-panel-header>
             <div class="inline">
                 <h4 class="mat-subheading-2">Turn on device alarm notifications</h4>
@@ -15,9 +13,7 @@
 
         <mat-expansion-panel>
             <mat-expansion-panel-header>
-                <mat-panel-title>
-                    Hide low priority alarms
-                </mat-panel-title>
+                <mat-panel-title> Hide low priority alarms </mat-panel-title>
             </mat-expansion-panel-header>
             <div class="inline">
                 <h4>Hide all low priority device alarm notifications</h4>
@@ -27,20 +23,16 @@
 
         <mat-expansion-panel>
             <mat-expansion-panel-header>
-                <mat-panel-title>
-                    Set screen brightness
-                </mat-panel-title>
+                <mat-panel-title> Set screen brightness </mat-panel-title>
             </mat-expansion-panel-header>
-            <mat-slider thumbLabel min="1" max="100" value="50" style="width: 100%;"></mat-slider>
+            <mat-slider thumbLabel min="1" max="100" value="50" style="width: 100%"></mat-slider>
         </mat-expansion-panel>
 
         <mat-expansion-panel>
             <mat-expansion-panel-header>
-                <mat-panel-title>
-                    Set display density
-                </mat-panel-title>
+                <mat-panel-title> Set display density </mat-panel-title>
             </mat-expansion-panel-header>
-            <mat-chip-list style="padding: 20px;">
+            <mat-chip-list style="padding: 20px">
                 <mat-chip color="primary" selected>Default</mat-chip>
                 <mat-chip>Comfortable</mat-chip>
                 <mat-chip>Compact</mat-chip>
