--- a/angular/demos/theme/src/app/demo/title/title.component.html
+++ b/angular/demos/theme/src/app/demo/title/title.component.html
@@ -5,11 +5,11 @@
         aria-label="Toggle sidenav"
         mat-icon-button
         (click)="openDrawer()"
-        style="margin-left: 0; margin-right: 10px;"
+        style="margin-left: 0; margin-right: 10px"
     >
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
     </button>
-    <div fxLayout="row" fxLayoutAlign="space-between center" style="width: 100%;">
+    <div fxLayout="row" fxLayoutAlign="space-between center" style="width: 100%">
         <h6 class="example-app-name">{{ title }}</h6>
         <button mat-stroked-button color="link" (click)="openLoginDialog()"><mat-icon>person</mat-icon> Log In</button>
     </div>
