--- a/angular/demos/theme/src/app/demo/alarms/alarms.component.html
+++ b/angular/demos/theme/src/app/demo/alarms/alarms.component.html
@@ -2,7 +2,7 @@
     <app-title></app-title>
     <mat-drawer-container class="drawer-container">
         <mat-drawer-content>
-            <div style="min-width: 200px;">
+            <div style="min-width: 200px">
                 <mat-accordion [multi]="true" [displayMode]="'flat'">
                     <div class="accordion">
                         <mat-expansion-panel *ngFor="let day of alarmHistory" [expanded]="true">
@@ -12,10 +12,10 @@
                             <mat-divider></mat-divider>
                             <mat-list>
                                 <mat-list-item *ngFor="let device of day.devices">
-                                    <mat-checkbox matListIcon style="height: unset;"></mat-checkbox>
+                                    <mat-checkbox matListIcon style="height: unset"></mat-checkbox>
                                     <h3 matLine>{{ device.name }}</h3>
                                     <p matLine>{{ device.manufacturer }}</p>
-                                    <button mat-stroked-button color="primary" style="min-width: unset;">
+                                    <button mat-stroked-button color="primary" style="min-width: unset">
                                         ACKNOWLEDGE
                                     </button>
                                 </mat-list-item>
@@ -27,11 +27,11 @@
         </mat-drawer-content>
 
         <mat-drawer mode="side" position="end" opened>
-            <div style="width: 325px;">
-                <mat-toolbar style="background-color: transparent;">
+            <div style="width: 325px">
+                <mat-toolbar style="background-color: transparent">
                     <mat-list-item>
-                        <div class="mat-subheading-2" style="margin-bottom: 2px;">Lighting - PDU 100</div>
-                        <div class="mat-body-2" style="line-height: 0.6rem;">Device 360</div>
+                        <div class="mat-subheading-2" style="margin-bottom: 2px">Lighting - PDU 100</div>
+                        <div class="mat-body-2" style="line-height: 0.6rem">Device 360</div>
                     </mat-list-item>
                 </mat-toolbar>
                 <mat-divider></mat-divider>
