--- a/angular/_blueTheme.scss
+++ b/angular/_blueTheme.scss
@@ -113,4 +113,7 @@
     .pxb-drawer-nested-nav-item mat-expansion-panel {
         background-color: map-get($pxb-white, 200);
     }
+    .pxb-drawer-nav-item-active-highlight {
+        opacity: 0.05;
+    }
 }
