--- a/angular/_darkTheme.scss
+++ b/angular/_darkTheme.scss
@@ -129,7 +129,9 @@
         .pxb-drawer-nav-item-active-highlight {
             opacity: 0.2;
         }
-        .mat-list-base .mat-list-item , .pxb-drawer-nav-item-rail, .pxb-drawer-nav-group-title  {
+        .mat-list-base .mat-list-item,
+        .pxb-drawer-nav-item-rail,
+        .pxb-drawer-nav-group-title {
             color: map-get($pxb-black, 50);
         }
         .pxb-drawer-nested-nav-item mat-expansion-panel {
