Tweak form field ripple color

--- a/angular/_blueTheme.scss
+++ b/angular/_blueTheme.scss
@@ -115,6 +115,9 @@
     .mat-form-field .mat-hint {
         color: map-get($pxb-gray, 500);
     }
+    .mat-form-field-ripple {
+        background-color: map-get($pxb-black, 500);
+    }
 
     /* PXB Drawer */
     .pxb-drawer-nested-nav-item mat-expansion-panel {
