--- a/angular/_blueTheme.scss
+++ b/angular/_blueTheme.scss
@@ -115,8 +115,13 @@
     .mat-form-field .mat-hint {
         color: map-get($pxb-gray, 500);
     }
+
+    /* Mat Form Field hover ripple */
     .mat-form-field-ripple {
-        background-color: map-get($pxb-black, 500);
+        background-color: map-get($pxb-gray, 500);
+    }
+    .mat-form-field-appearance-outline .mat-form-field-outline-thick {
+        color: map-get($pxb-gray, 500);
     }
 
     /* PXB Drawer */
