--- a/angular/_pxb-component-theme.scss
+++ b/angular/_pxb-component-theme.scss
@@ -113,7 +113,8 @@
             background-color: map-get($primary, 500);
         }
         .pxb-drawer-nav-item-rail {
-            &:hover, &:focus {
+            &:hover,
+            &:focus {
                 background: mat-color($background, 'hover');
             }
         }
